# derivative-hedging-rl

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  AUTOGEN_INTEGRATION_PLAN.md  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_ML_INTEGRATION.md  DASHBOARD_ANALYSIS_AND_FIXES.md  DASHBOARD_ML_FEATURES.md  DATA_DOWNLOAD_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  FRONTEND_ML_INTEGRATION.md  IMPLEMENTATION_PLAN.md  INPUT_OUTPUT_FLOW.md  ML_IMPROVEMENTS_COMPLETE.md  ML_INTEGRATION_REPORT.md  ML_INTEGRATION_STATUS.md  ML_MODEL_DEPLOYMENT_SUMMARY.md  ML_PERFORMANCE_RATING.md  ML_RATING_SUMMARY.md  ML_ROUTING_ANALYSIS.md  ML_ROUTING_VERIFICATION.md  ML_SERVICE_QUICK_REFERENCE.md  PHASE1_COMPLETE.md  PHASE_1-3_UI_ENHANCEMENTS.md  PHASE_4_ADVANCED_UI_FEATURES.md  PROJECT_IMPROVEMENTS_NEEDED.md  PROJECT_STATUS_COMPLETE.md  PROJECT_SUMMARY.md  PROJECT_TASK_STATUS.md  README.md  README_PRODUCTION.md  REALTIME_FEATURES_GUIDE.md  REALTIME_IMPLEMENTATION_COMPLETE.md  REALTIME_QUICKSTART.md  RUN.md  SERVICES_STATUS.md  SOLUTIONS_APPLIED.md  TECH_STACK_DECISION.md  (+39 more)
.github/workflows/: ci.yml  test-ci-locally.ps1
MD/: DATA_SOURCES.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  NOTEBOOKS_REAL_DATA_GUIDE.md  PHASE2_COMPLETE.md  PHASE3_AGENT_TRAINING.md  PHASE3_INSTALLATION.md  PHASE3_SUMMARY.md  PRODUCT_OVERVIEW.md  QUICK_START.md  SPRINT_1.2_COMPLETE.md  UV_GUIDE.md
backend/: .env.example  Dockerfile  create-test-users.js  insert-test-users.sql  jest.config.js  package.json  test-ml-integration.ts  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  server.ts
backend/src/__tests__/controllers/: auth.controller.test.ts  portfolio.controller.test.ts  trade.controller.test.ts
backend/src/__tests__/integration/: auth.integration.test.ts  portfolio.integration.test.ts
backend/src/__tests__/middleware/: auth.middleware.test.ts
backend/src/__tests__/services/: auth.service.test.ts  ml.service.test.ts  redis.service.test.ts
backend/src/config/: database.ts  index.ts  logger.ts
backend/src/controllers/: alert.controller.ts  analytics.controller.ts  auth.controller.ts  ml.controller.ts  portfolio.controller.ts  position.controller.ts  realtime.controller.ts  trade.controller.ts  user.controller.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts  logger.middleware.ts  validation.middleware.ts
backend/src/routes/: alert.routes.ts  analytics.routes.ts  auth.routes.ts  ml.routes.ts  portfolio.routes.ts  position.routes.ts  realtime.routes.ts  sse.routes.ts  trade.routes.ts  user.routes.ts
backend/src/services/: auth.service.ts  ml.service.ts  redis.service.ts  sse.service.ts  websocket.service.ts
backend/src/test/: setup.ts
backend/src/types/: index.ts
configs/: config.yaml
examples/: quickstart_training.py
frontend/: .env.development  .env.example  .env.production  ARCHITECTURE.md  Dockerfile  INTEGRATION_EXAMPLE.js  NAVIGATION_FIX_SUMMARY.md  TradingRiskPlatform.jsx  index.html  nginx.conf  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts
frontend/src/: index.css  main.tsx
frontend/src/__tests__/: Badge.test.tsx  Button.test.tsx  GlobalSearch.test.tsx  Modal.test.tsx  Table.test.tsx  Toast.test.tsx
frontend/src/__tests__/services/: authService.test.js  portfolioService.test.js
frontend/src/components/: RealtimeDemo.tsx  StatusIndicators.jsx
frontend/src/components/common/: AnimCounter.jsx  Badge.jsx  Button.jsx  Card.jsx  ErrorBoundary.jsx  Input.jsx  MetricCard.jsx  Select.jsx  SkeletonLoader.jsx  Spinner.jsx  Toast.jsx  index.js
frontend/src/components/layout/: Sidebar.jsx  TopBar.jsx  index.js
frontend/src/components/modals/: CreateAlertModal.jsx  CreatePortfolioModal.jsx  CreateTradeModal.jsx  NewPositionModal.jsx  index.js
frontend/src/constants/: colors.js  mockData.js
frontend/src/contexts/: RealtimeContext.tsx
frontend/src/hooks/: useSSE.ts  useWebSocket.ts
frontend/src/services/: alertService.ts  analyticsService.ts  api.ts  authService.ts  mlService.ts  portfolioService.ts  positionService.ts  tradeService.ts  userService.ts
frontend/src/test/: setup.ts
migrations/: env.py
ml-service/: .env.example  Dockerfile  load_model.py  main.py  requirements.txt  test_api.py  test_simple.py
notebooks/: 01_quick_start.ipynb  02_training_demo.ipynb  03_evaluation_analysis.ipynb  04_inference_examples.ipynb  05_backtesting.ipynb  README.md  data_preprocessing.ipynb
notebooks/data/: test_scenarios.csv
notebooks/results/: batch_inference_report.txt  batch_predictions.csv
notebooks/results/exports/: predictions_20260224_123955.json  predictions_summary_20260224_123955.csv  trading_instructions_20260224_123955.json
scripts/: backtest_extended.py  compare_advanced_baselines.py  create_test_user.py  download_data_extended.py  evaluate_agents.py  init_db.sql  optimize_hyperparameters.py  prepare_multi_asset_data.py  run_batch_inference.py  setup_week1.py  test_integration.py  train_agent.py
src/: __init__.py
src/agents/: __init__.py  config.py  evaluator.py  ppo_agent.py  sac_agent.py  trainer.py
src/api/: __init__.py  main.py  websocket.py
src/api/routes/: __init__.py  auth.py  baselines.py  datasets.py  environments.py  evaluations.py  experiments.py  health.py  models.py
src/api/schemas/: __init__.py
src/auth/: __init__.py  security.py
src/baselines/: __init__.py  advanced_models.py  hedging_strategies.py
src/data/: __init__.py  fetchers.py  historical_loader.py  preprocessing.py  synthetic_data.py  validation.py
src/database/: __init__.py  models.py
src/environments/: __init__.py  hedging_env.py  multi_asset_env.py  real_data_env.py  reward_functions.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  data_loader.py  pipeline.py  postprocessor.py  preprocessor.py
src/pricing/: __init__.py  black_scholes.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_agents.py  test_baselines.py  test_data_validation.py  test_environment.py  test_evaluation.py
(+20 files in other folders)
